<resources>
    <!-- Settings -->
    <string name="app_name">TabataTraining</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_tabata">TabataActivity</string>
    <string name="title_activity_program">ProgramActivity</string>
    <string name="title_activity_tabata_program_creation">Settings</string>

    <!-- Useful strings -->
    <string name="zero">0</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="favoris">Favoris</string>
    <string name="programmes">Programmes</string>
    <string name="placeholder_string_$1">%1$s</string>
    <string name="placeholder_number_$1">%1$d</string>
    <string name="label_ajouter">Ajouter</string>
    <string name="label_modifier">Modifier</string>
    <string name="label_supprimer">Supprimer</string>

    <!-- Main Activity -->
    <string name="button_tabata">Entrainement</string>
    <string name="button_programmes">Programmes</string>
    <string name="button_statistiques">Statistiques</string>
    <string name="label_programme_actif">Programme actif</string>
    <string name="label_aucun_programme">Aucun programme</string>
    <string name="label_nombre_de_tabata">Nombre de tabata</string>
    <string name="label_nombre_de_cycles">Nombre de cycles</string>
    <string name="label_temps_de_preparation">Temps de préparation</string>
    <string name="label_temps_d_exercices">Temps d\'exercices</string>
    <string name="label_temps_de_repos">Temps de repos</string>

    <!-- Programme Activity -->

    <!-- Menu -->
    <string name="menu_tabata_start">Start</string>
    <string name="menu_favorite">Favori</string>

    <!-- Popup -->
    <string name="title_suppression">Suppression</string>
    <string name="voulez_vous_vraiment_supprimer_$text">"Voulez vous vraiment supprimer %1$s ?"</string>

    <!-- Add program activity -->
    <string name="label_nom_du_programme">Nom du programme</string>
    <string name="label_nombre_tabata">Nombre de Tabata</string>
    <string name="label_nombre_cycle">Nombre de cycles</string>
    <string name="label_temps_rest">Temps de repos (secondes)</string>
    <string name="label_temps_work">Temps d\'exercices (secondes)</string>
    <string name="label_temps_prepare">Temps de préparation (secondes)</string>
    <string name="button_valider">Valider</string>

    <!-- Tabata Activity -->
    <string name="label_timer_value">00:00</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Interrompre (Arrêt complet)</string>
    <string name="label_start_pour_commencer">Start pour commencer !</string>
    <string name="label_cycle_restants">Cycles restants : 0</string>
    <string name="label_cycle_restants_$count">Cycles restants : %1$d</string>
    <string name="label_tabata_restants">Tabata restants : 0</string>
    <string name="label_tabata_restants_$count">Tabata restants : %1$d</string>

    <!-- Toasts -->
    <string name="vous_devez_selectionner_un_programme">Vous devez sélectionner un programme</string>
    <string name="toast_programme_entrainement_arrete">Programme d\'entrainement arrêté</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_annulee">Action annulée</string>
</resources>
