<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorDarkLight"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.appsport.MainActivity">

        <TextView
            android:textColor="@color/colorWhite"
            android:text="@string/label_aucun_programme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/label_current_program"
            android:layout_below="@+id/label_programme_actif"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:textAlignment="center"
            android:textStyle="normal|bold" />

        <Button
            android:text="@string/button_programmes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_program"
            android:layout_alignParentStart="true"
            android:onClick="onClickProgramButton"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_stats"
            android:text="@string/button_statistiques"
            android:layout_below="@+id/button_program"
            android:layout_alignParentStart="true"
            android:onClick="onClickStatsButton"/>

        <TextView
            android:textColor="@color/colorWhite"
            android:text="@string/label_programme_actif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/label_programme_actif"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_below="@+id/button_stats"
            android:layout_alignParentStart="true"
            android:layout_marginTop="19dp" />

        <TextView
            android:textColor="@color/colorWhite"
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="55dp"
            android:id="@+id/home_tabata_count"
            android:textStyle="normal|bold" />

        <TextView
            android:textColor="@color/colorWhite"
            android:text="@string/label_nombre_de_tabata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="14dp"
            android:id="@+id/textView2"
            android:layout_below="@+id/label_current_program"
            android:layout_alignParentStart="true" />

        <TextView
            android:textColor="@color/colorWhite"
            android:text="@string/label_nombre_cycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:id="@+id/textView10"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/textView2" />

        <TextView
            android:textColor="@color/colorWhite"
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView10"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="55dp"
            android:id="@+id/home_cycle_count"
            android:textStyle="normal|bold" />

        <TextView
            android:textColor="@color/colorWhite"
            android:text="@string/label_temps_de_preparation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView10"
            android:layout_alignStart="@+id/textView10"
            android:layout_marginTop="14dp"
            android:id="@+id/textView12" />

        <TextView
            android:textColor="@color/colorWhite"
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView12"
            android:layout_alignEnd="@+id/home_cycle_count"
            android:id="@+id/home_prepare_time"
            android:textStyle="normal|bold" />

        <TextView
            android:textColor="@color/colorWhite"
            android:text="@string/label_temps_d_exercices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView12"
            android:layout_alignStart="@+id/textView12"
            android:layout_marginTop="13dp"
            android:id="@+id/textView14" />

        <TextView
            android:textColor="@color/colorWhite"
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView14"
            android:layout_alignEnd="@+id/home_prepare_time"
            android:id="@+id/home_work_time"
            android:textStyle="normal|bold" />

        <TextView
            android:textColor="@color/colorWhite"
            android:text="@string/label_temps_de_repos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView14"
            android:layout_alignStart="@+id/textView14"
            android:layout_marginTop="13dp"
            android:id="@+id/textView16" />

        <TextView
            android:textColor="@color/colorWhite"
            android:text="@string/zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView16"
            android:layout_alignEnd="@+id/home_work_time"
            android:id="@+id/home_rest_time"
            android:textStyle="normal|bold" />
</RelativeLayout>
