<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDarkLight">

    <RelativeLayout
        android:id="@+id/content_tabata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.appsport.activity.TabataActivity"
        tools:showIn="@layout/activity_tabata">

        <TextView
            android:text="@string/label_timer_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tabata_counter"
            android:textSize="65sp"
            android:visibility="visible"
            android:textStyle="normal|bold"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:text="@string/label_start_pour_commencer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tabata_state_text"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="normal|bold"
            android:layout_marginTop="13dp"
            android:layout_below="@+id/tabata_counter"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">

        <TextView
            android:text="@string/label_cycle_restants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cycle_left_count"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="15sp"
            android:textAlignment="viewEnd"
            android:layout_marginEnd="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/label_tabata_restants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tabata_left_count"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="15sp"
            android:textAlignment="viewStart"
            android:layout_marginStart="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tabata_pause_button"
            android:onClick="buttonTabataPause"
            android:layout_marginTop="44dp"
            android:layout_below="@+id/cycle_left_count"
            android:layout_toStartOf="@+id/tabata_startstop_button" />

        <Button
            android:text="@string/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tabata_startstop_button"
            android:onClick="buttonTabataStart"
            android:layout_alignBaseline="@+id/tabata_pause_button"
            android:layout_alignBottom="@+id/tabata_pause_button"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="13dp" />
    </RelativeLayout>

</LinearLayout>
