<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ProgramActivity"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_programs"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Mes programmes"
        app:titleTextColor="@color/colorWhite"/>

    <include layout="@layout/content_program"
        android:id="@+id/include"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_marginTop="?android:attr/actionBarSize" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        app:menu_fab_size="normal"
        app:menu_showShadow="true"
        app:menu_shadowColor="#66000000"
        app:menu_shadowRadius="4dp"
        app:menu_shadowXOffset="1dp"
        app:menu_shadowYOffset="3dp"
        app:menu_colorNormal="@color/colorDark"
        app:menu_colorPressed="@color/colorDarkLight"
        app:menu_colorRipple="#99FFFFFF"
        app:menu_animationDelayPerItem="50"
        app:menu_icon="@drawable/fab_add"
        app:menu_buttonSpacing="0dp"
        app:menu_labels_margin="0dp"
        app:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        app:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        app:menu_labels_paddingTop="4dp"
        app:menu_labels_paddingRight="8dp"
        app:menu_labels_paddingBottom="4dp"
        app:menu_labels_paddingLeft="5dp"
        app:menu_labels_padding="8dp"
        app:menu_labels_textColor="#FFFFFF"
        app:menu_labels_textSize="14sp"
        app:menu_labels_cornerRadius="3dp"
        app:menu_labels_colorNormal="#333333"
        app:menu_labels_colorPressed="#444444"
        app:menu_labels_colorRipple="#66FFFFFF"
        app:menu_labels_showShadow="true"
        app:menu_labels_singleLine="false"
        app:menu_labels_ellipsize="none"
        app:menu_labels_maxLines="-1"
        app:menu_labels_position="left"
        app:menu_openDirection="up"
        app:menu_backgroundColor="@android:color/transparent"
        app:menu_fab_label="Fermer le menu"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/floatingActionButtonDeleteProgram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_delete"
            android:onClick="onClickDeleteProgram"
            app:fab_size="normal"
            app:fab_colorNormal="@color/colorDark"
            app:fab_colorPressed="@color/colorDarkLight"
            app:fab_label="@string/label_supprimer" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/floatingActionButtonEditProgram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_manage"
            android:onClick="onClickEditProgram"
            app:fab_size="normal"
            app:fab_colorNormal="@color/colorDark"
            app:fab_colorPressed="@color/colorDarkLight"
            app:fab_label="@string/label_modifier" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/floatingActionButtonAddProgram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_input_add"
            android:onClick="onClickAddProgram"
            app:fab_size="normal"
            app:fab_colorNormal="@color/colorDark"
            app:fab_colorPressed="@color/colorDarkLight"
            app:fab_label="@string/label_ajouter" />

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
